@@ -1,3 +1,6 @@
+Alastair S - Thu Mar 3 2005
+	added matrix, a matrix screen simulation
+
 Alastair S - Tue Mar 1 2005
 	calc and othello are now relative
 	image viewer zoom global fix
